// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`throttleHandler display name should not wrap display name in production env 1`] = `
<ThrottleHandler>
  <Target
    undefined={[Function]}
  />
</ThrottleHandler>
`;

exports[`throttleHandler display name should wrap display name in non-production env 1`] = `
<throttleHandler(Target)>
  <Target
    undefined={[Function]}
  />
</throttleHandler(Target)>
`;

exports[`throttleHandler should call \`e.persist()\` if it has been passed 1`] = `
Array [
  Array [
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    },
    undefined,
    undefined,
  ],
]
`;

exports[`throttleHandler should call \`e.persist()\` if it has been passed 2`] = `
Array [
  Array [],
]
`;

exports[`throttleHandler should pass \`interval\` option to \`just-throttle\` 1`] = `
Array [
  Array [
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    },
    75,
    undefined,
  ],
]
`;

exports[`throttleHandler should pass \`leadingCall\` option to \`just-throttle\` 1`] = `
Array [
  Array [
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    },
    75,
    true,
  ],
]
`;

exports[`throttleHandler should pass handler arguments through 1`] = `
Array [
  Array [
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    },
    undefined,
    undefined,
  ],
]
`;
